// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kiwi-alert renders error: error 1`] = `
<kiwi-alert class="alert alert-danger" type="error" style="display: block;">
  <!---->
  <span>
    error
  </span>
</kiwi-alert>
`;

exports[`kiwi-alert renders info: info 1`] = `
<kiwi-alert class="alert alert-info" type="info" style="display: block;">
  <!---->
  <span>
    info
  </span>
</kiwi-alert>
`;

exports[`kiwi-alert renders success: success 1`] = `
<kiwi-alert class="alert alert-success" type="success" style="display: block;">
  <!---->
  <span>
    success
  </span>
</kiwi-alert>
`;

exports[`kiwi-alert renders warn: warn 1`] = `
<kiwi-alert class="alert alert-warning" type="warn" style="display: block;">
  <!---->
  <span>
    warn
  </span>
</kiwi-alert>
`;
